Fixed: wflow-consoleweb - Progressive/Universal Theme - Extra margin bottom added to header buttons. @8.0-SNAPSHOT

--- a/wflow-consoleweb/src/main/webapp/css/userview_v5.css
+++ b/wflow-consoleweb/src/main/webapp/css/userview_v5.css
@@ -5528,8 +5528,8 @@ a {
 #adminBar {
     display:none;
 }
-.form-button, .btn, .button{
-    margin-bottom: 5px !important;
+#content .form-button, #content .btn, #content .button{
+    margin-bottom: 5px;
 }
 
 
